# kor_en_translator

./: .gitignore  .gitignore_ex  README.md  config.yaml  pyproject.toml
app/: main.py
app/api/v1/routes/: auth.py  translate.py
app/core/: config.py  deps.py  security.py
app/db/: base.py  session.py
app/db/models/: user.py
app/ml/: embeddings.py  transformer.py
app/models/: blocks.py  transformer.py  translator.py  visualize.py
app/schemas/: translation.py  user.py
app/services/: translation_service.py
backend/: README.md  config.yaml  config_ex.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: auth.py  translate.py  users.py  viz.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/models/: __init__.py  user.py
backend/app/ml/: pe.py  translator.py  visualize.py
backend/app/schemas/: translation.py  user.py
backend/app/services/: auth_service.py  translation_service.py
backend/tests/: test_translate.py
frontend/: .env_example  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Dashboard.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/hooks/: useAuth.ts  useTranslate.ts
frontend/src/services/: api.ts
