[project]
name = "kor-en-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
]
