[project]
name = "kor-en-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "protobuf>=6.33.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
]
